crates/servicepoint_binding_uniffi/libraries/ruby/lib/servicepoint_binding_uniffi.rb

# This file was autogenerated by some hot garbage in the `uniffi` crate.
# Trust me, you don't want to mess with it!

# Common helper code.
#
# Ideally this would live in a separate .rb file where it can be unittested etc
# in isolation, and perhaps even published as a re-useable package.
#
# However, it's important that the details of how this helper code works (e.g. the
# way that different builtin types are passed across the FFI) exactly match what's
# expected by the rust code on the other side of the interface. In practice right
# now that means coming from the exact some version of `uniffi` that was used to
# compile the rust component. The easiest way to ensure this is to bundle the Ruby
# helpers directly inline like we're doing here.

require 'ffi'


module ServicepointBindingUniffi
  def self.uniffi_in_range(i, type_name, min, max)
  raise TypeError, "no implicit conversion of #{i} into Integer" unless i.respond_to?(:to_int)
  i = i.to_int
  raise RangeError, "#{type_name} requires #{min} <= value < #{max}" unless (min <= i && i < max)
  i
end

def self.uniffi_utf8(v)
  raise TypeError, "no implicit conversion of #{v} into String" unless v.respond_to?(:to_str)
  v = v.to_str.encode(Encoding::UTF_8)
  raise Encoding::InvalidByteSequenceError, "not a valid UTF-8 encoded string" unless v.valid_encoding?
  v
end

def self.uniffi_bytes(v)
  raise TypeError, "no implicit conversion of #{v} into String" unless v.respond_to?(:to_str)
  v.to_str
end

  class RustBuffer < FFI::Struct
  layout :capacity, :int32,
         :len,      :int32,
         :data,     :pointer

  def self.alloc(size)
    return ServicepointBindingUniffi.rust_call(:ffi_servicepoint_binding_uniffi_rustbuffer_alloc, size)
  end

  def self.reserve(rbuf, additional)
    return ServicepointBindingUniffi.rust_call(:ffi_servicepoint_binding_uniffi_rustbuffer_reserve, rbuf, additional)
  end

  def free
    ServicepointBindingUniffi.rust_call(:ffi_servicepoint_binding_uniffi_rustbuffer_free, self)
  end

  def capacity
    self[:capacity]
  end

  def len
    self[:len]
  end

  def len=(value)
    self[:len] = value
  end

  def data
    self[:data]
  end

  def to_s
    "RustBuffer(capacity=#{capacity}, len=#{len}, data=#{data.read_bytes len})"
  end

  # The allocated buffer will be automatically freed if an error occurs, ensuring that
  # we don't accidentally leak it.
  def self.allocWithBuilder
    builder = RustBufferBuilder.new

    begin
      yield builder
    rescue => e
      builder.discard
      raise e
    end
  end

  # The RustBuffer will be freed once the context-manager exits, ensuring that we don't
  # leak it even if an error occurs.
  def consumeWithStream
    stream = RustBufferStream.new self

    yield stream

    raise RuntimeError, 'junk data left in buffer after consuming' if stream.remaining != 0
  ensure
    free
  end# The primitive String type.

  def self.allocFromString(value)
    RustBuffer.allocWithBuilder do |builder|
      builder.write value.encode('utf-8')
      return builder.finalize
    end
  end

  def consumeIntoString
    consumeWithStream do |stream|
      return stream.read(stream.remaining).force_encoding(Encoding::UTF_8)
    end
  end

  # The primitive Bytes type.

  def self.allocFromBytes(value)
    RustBuffer.allocWithBuilder do |builder|
      builder.write_Bytes(value)
      return builder.finalize
    end
  end

  def consumeIntoBytes
    consumeWithStream do |stream|
      return stream.readBytes
    end
  end

  # The Record type Constants.

  def self.alloc_from_TypeConstants(v)
    RustBuffer.allocWithBuilder do |builder|
      builder.write_TypeConstants(v)
      return builder.finalize
    end
  end

  def consumeIntoTypeConstants
    consumeWithStream do |stream|
      return stream.readTypeConstants
    end
  end

  

  # The Enum type CompressionCode.

  def self.alloc_from_TypeCompressionCode(v)
    RustBuffer.allocWithBuilder do |builder|
      builder.write_TypeCompressionCode(v)
      return builder.finalize
    end
  end

  def consumeIntoTypeCompressionCode
    consumeWithStream do |stream|
      return stream.readTypeCompressionCode
    end
  end
  

  

  
end

module UniFFILib
  class ForeignBytes < FFI::Struct
    layout :len,      :int32,
           :data,     :pointer

    def len
      self[:len]
    end

    def data
      self[:data]
    end

    def to_s
      "ForeignBytes(len=#{len}, data=#{data.read_bytes(len)})"
    end
  end
end

private_constant :UniFFILib
  
# Helper for structured reading of values from a RustBuffer.
class RustBufferStream

  def initialize(rbuf)
    @rbuf = rbuf
    @offset = 0
  end

  def remaining
    @rbuf.len - @offset
  end

  def read(size)
    raise InternalError, 'read past end of rust buffer' if @offset + size > @rbuf.len

    data = @rbuf.data.get_bytes @offset, size

    @offset += size

    data
  end

  def readU8
    unpack_from 1, 'c'
  end

  def readU64
    unpack_from 8, 'Q>'
  end

  def readBool
    v = unpack_from 1, 'c'

    return false if v == 0
    return true if v == 1

    raise InternalError, 'Unexpected byte for Boolean type'
  end

  def readString
    size = unpack_from 4, 'l>'

    raise InternalError, 'Unexpected negative string length' if size.negative?

    read(size).force_encoding(Encoding::UTF_8)
  end

  def readBytes
    size = unpack_from 4, 'l>'

    raise InternalError, 'Unexpected negative byte string length' if size.negative?

    read(size).force_encoding(Encoding::BINARY)
  end

  # The Object type BitVec.

  def readTypeBitVec
    pointer = FFI::Pointer.new unpack_from 8, 'Q>'
    return BitVec._uniffi_allocate(pointer)
  end

  # The Object type Bitmap.

  def readTypeBitmap
    pointer = FFI::Pointer.new unpack_from 8, 'Q>'
    return Bitmap._uniffi_allocate(pointer)
  end

  # The Object type BrightnessGrid.

  def readTypeBrightnessGrid
    pointer = FFI::Pointer.new unpack_from 8, 'Q>'
    return BrightnessGrid._uniffi_allocate(pointer)
  end

  # The Object type CharGrid.

  def readTypeCharGrid
    pointer = FFI::Pointer.new unpack_from 8, 'Q>'
    return CharGrid._uniffi_allocate(pointer)
  end

  # The Object type Command.

  def readTypeCommand
    pointer = FFI::Pointer.new unpack_from 8, 'Q>'
    return Command._uniffi_allocate(pointer)
  end

  # The Object type Connection.

  def readTypeConnection
    pointer = FFI::Pointer.new unpack_from 8, 'Q>'
    return Connection._uniffi_allocate(pointer)
  end

  # The Object type Cp437Grid.

  def readTypeCp437Grid
    pointer = FFI::Pointer.new unpack_from 8, 'Q>'
    return Cp437Grid._uniffi_allocate(pointer)
  end

  # The Record type Constants.

  def readTypeConstants
    Constants.new(
      readU64,
      readU64,
      readU64,
      readU64,
      readU64,
      readU64
    )
  end

  

  

  # The Error type CharGridError

  def readTypeCharGridError
    variant = unpack_from 4, 'l>'
    
    if variant == 1
        return CharGridError::StringNotOneChar.new(
            readString()
        )
    end
    if variant == 2
        return CharGridError::InvalidSeriesLength.new(
            readU64(),
            readU64()
        )
    end
    if variant == 3
        return CharGridError::OutOfBounds.new(
            readU64(),
            readU64()
        )
    end

    raise InternalError, 'Unexpected variant tag for TypeCharGridError'
  end
  

  
  
  # The Enum type CompressionCode.

  def readTypeCompressionCode
    variant = unpack_from 4, 'l>'
    
    if variant == 1
      return CompressionCode::UNCOMPRESSED
    end
    if variant == 2
      return CompressionCode::ZLIB
    end
    if variant == 3
      return CompressionCode::BZIP2
    end
    if variant == 4
      return CompressionCode::LZMA
    end
    if variant == 5
      return CompressionCode::ZSTD
    end

    raise InternalError, 'Unexpected variant tag for TypeCompressionCode'
  end

  

  

  

  # The Error type ServicePointError

  def readTypeServicePointError
    variant = unpack_from 4, 'l>'
    
    if variant == 1
        return ServicePointError::IoError.new(
            readString()
        )
    end
    if variant == 2
        return ServicePointError::InvalidBrightness.new(
            readU8()
        )
    end

    raise InternalError, 'Unexpected variant tag for TypeServicePointError'
  end
  

  

  def unpack_from(size, format)
    raise InternalError, 'read past end of rust buffer' if @offset + size > @rbuf.len

    value = @rbuf.data.get_bytes(@offset, size).unpack format

    @offset += size

    # TODO: verify this
    raise 'more than one element!!!' if value.size > 1

    value[0]
  end
end

private_constant :RustBufferStream
  
# Helper for structured writing of values into a RustBuffer.
class RustBufferBuilder
  def initialize
    @rust_buf = RustBuffer.alloc 16
    @rust_buf.len = 0
  end

  def finalize
    rbuf = @rust_buf

    @rust_buf = nil

    rbuf
  end

  def discard
    return if @rust_buf.nil?

    rbuf = finalize
    rbuf.free
  end

  def write(value)
    reserve(value.bytes.size) do
      @rust_buf.data.put_array_of_char @rust_buf.len, value.bytes
    end
  end

  def write_U8(v)
    v = ServicepointBindingUniffi::uniffi_in_range(v, "u8", 0, 2**8)
    pack_into(1, 'c', v)
  end

  def write_U64(v)
    v = ServicepointBindingUniffi::uniffi_in_range(v, "u64", 0, 2**64)
    pack_into(8, 'Q>', v)
  end

  def write_Bool(v)
    pack_into(1, 'c', v ? 1 : 0)
  end

  def write_String(v)
    v = ServicepointBindingUniffi::uniffi_utf8(v)
    pack_into 4, 'l>', v.bytes.size
    write v
  end

  def write_Bytes(v)
    v = ServicepointBindingUniffi::uniffi_bytes(v)
    pack_into 4, 'l>', v.bytes.size
    write v
  end

  # The Object type BitVec.

  def write_TypeBitVec(obj)
    pointer = BitVec._uniffi_lower obj
    pack_into(8, 'Q>', pointer.address)
  end

  # The Object type Bitmap.

  def write_TypeBitmap(obj)
    pointer = Bitmap._uniffi_lower obj
    pack_into(8, 'Q>', pointer.address)
  end

  # The Object type BrightnessGrid.

  def write_TypeBrightnessGrid(obj)
    pointer = BrightnessGrid._uniffi_lower obj
    pack_into(8, 'Q>', pointer.address)
  end

  # The Object type CharGrid.

  def write_TypeCharGrid(obj)
    pointer = CharGrid._uniffi_lower obj
    pack_into(8, 'Q>', pointer.address)
  end

  # The Object type Command.

  def write_TypeCommand(obj)
    pointer = Command._uniffi_lower obj
    pack_into(8, 'Q>', pointer.address)
  end

  # The Object type Connection.

  def write_TypeConnection(obj)
    pointer = Connection._uniffi_lower obj
    pack_into(8, 'Q>', pointer.address)
  end

  # The Object type Cp437Grid.

  def write_TypeCp437Grid(obj)
    pointer = Cp437Grid._uniffi_lower obj
    pack_into(8, 'Q>', pointer.address)
  end

  # The Record type Constants.

  def write_TypeConstants(v)
    self.write_U64(v.tile_size)
    self.write_U64(v.tile_width)
    self.write_U64(v.tile_height)
    self.write_U64(v.pixel_width)
    self.write_U64(v.pixel_height)
    self.write_U64(v.pixel_count)
  end

  

  # The Enum type CompressionCode.

  def write_TypeCompressionCode(v)
    pack_into(4, 'l>', v)
 end
   

  

  

  private

  def reserve(num_bytes)
    if @rust_buf.len + num_bytes > @rust_buf.capacity
      @rust_buf = RustBuffer.reserve(@rust_buf, num_bytes)
    end

    yield

    @rust_buf.len += num_bytes
  end

  def pack_into(size, format, value)
    reserve(size) do
      @rust_buf.data.put_array_of_char @rust_buf.len, [value].pack(format).bytes
    end
  end
end

private_constant :RustBufferBuilder

  # Error definitions
  class RustCallStatus < FFI::Struct
  layout :code,    :int8,
         :error_buf, RustBuffer

  def code
    self[:code]
  end

  def error_buf
    self[:error_buf]
  end

  def to_s
    "RustCallStatus(code=#{self[:code]})"
  end
end

# These match the values from the uniffi::rustcalls module
CALL_SUCCESS = 0
CALL_ERROR = 1
CALL_PANIC = 2

